# TMS-flask-project

./: app.py  models.py  pyproject.toml  settings.py
instance/: db.sqlite3
templates/: create_post.html  delete_post.html  edit_post.html  home.html  show_post.html
