[tool.poetry]
name = "flask-project"
version = "0.1.0"
description = ""
authors = ["ig.rudenko <ig.rudenko@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "flask_project"}]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.3.2"
flask-sqlalchemy = "^3.0.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
